--- a/src/app/pages/admin/users/users-admin.page.html
+++ b/src/app/pages/admin/users/users-admin.page.html
@@ -102,7 +102,7 @@
                   </div>
                   <div class="ml-4">
                     <div class="text-sm font-medium text-gray-900">
-                      {{ user.displayName || 'N/A' }}
+                      {{ user.displayName && user.displayName !== 'undefined' ? user.displayName : user.email.split('@')[0] }}
                     </div>
                     <div class="text-sm text-gray-500">
                       {{ user.email }}
